# gRPC-ros-bridge

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/workflows/: docker-image.yml  docker-server.yml
client_app/: package.xml  setup.cfg  setup.py
client_app/client_app/: client_node.py
demo_msgs/: CMakeLists.txt  package.xml
demo_msgs/msg/: BrokerRequest.msg
docker/: Dockerfile  Dockerfile-client  Dockerfile-server  README.md  docker-compose.yml  entrypoint.sh
docs/: architecture.md  install.md  usermanual.md
generatedFiles/msg/: BrokerResponse.msg
generator/org.acumos.gen.ros/: .classpath  .project  build.properties  plugin.properties  pom.xml
grpc_ros_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
grpc_ros_bridge/config/: config.json
grpc_ros_bridge/grpc_ros_bridge/: broker_bridge.py  broker_pb2_grpc.py  client_node.py  databroker_pb2_grpc.py  grpc_bridge.py  main.py
grpc_ros_bringup/: package.xml  setup.cfg  setup.py
grpc_ros_bringup/launch/: bringup.py  bringup_client.py  bringup_gen.py
grpc_ros_client/: CMakeLists.txt  package.xml  setup.cfg  setup.py
grpc_ros_client/grpc_ros_client/: demo_pb2_grpc.py  grpc_client.py
grpc_ros_client/script/: demo_pb2.py  demo_pb2_grpc.py  grpc_client.py
grpc_ros_client/test/: .test_grpc_client_launch.py  test_request_response.py
grpc_ros_data_generator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
grpc_ros_data_generator/grpc_ros_data_generator/: generator.py
grpc_ros_data_generator/script/: grpc_ros_data_generator_node.py
grpc_ros_data_generator/test/: test_data_gen.py
grpc_ros_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
grpc_ros_interface/msg/: BrokerRequest.msg  BrokerResponse.msg
grpc_ros_interface/msg/broker/: BrokerRequest.msg  BrokerResponse.msg
ros_client_app/: package.xml  setup.cfg  setup.py
ros_client_app/ros_client_app/: client_node.py
