<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grpc_ros_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ragesh.ramachandran@ipa.fraunhofer.de">ragesh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>grpc_ros_client</exec_depend>
  <exec_depend>grpc_ros_data_generator</exec_depend>
  <exec_depend>grpc_ros_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
