<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grpc_ros_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ragesh.ramachandran@ipa.fraunhofer.de">ragesh</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>grpc_ros_client</exec_depend>
  <exec_depend>grpc_ros_data_generator</exec_depend>
  <exec_depend>grpc_ros_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
